--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -14,6 +14,22 @@ h1 {
   margin: 0;
 }
 
+#project-status-bar {
+  margin: 15px 0 30px 0;
+}
+  #project-status-bar > div {
+    background-color: #F5F5F9;
+    border: 1px solid #DBDBDC;
+    color: #666;
+  }
+  #project-status-bar > div.active {
+    background-color: #EEFFEE;
+  }
+    #project-status-bar > div div {
+      white-space: pre;
+      padding: 3px;
+    }
+
 div.subtitle {
   margin: .25em 0 .75em 0;
   font-weight: bold;
@@ -92,6 +108,16 @@ div.subtitle {
 
       <div class="clearfix"></div>
 
+      {% if project.lifecycle_stage %}
+      <div id="project-status-bar" class="row">
+        {% for stage in project.lifecycle_stage.0.stages %}
+          <div class="{% for w in project.lifecycle_stage.0.stage_col_width %}col-{{w}} {% endfor %} {% if stage.complete %}active{% endif %}">
+            <div>{{stage.label}}</div>
+          </div>
+        {% endfor %}
+      </div>
+      {% endif %}
+      
       <div style="margin-top: 1em">
       {% block body_content %}
       {% endblock %}
