add 'Add system' button to projects page which goes to the app catalog but only shows apps that are for IT systems
Apps must implement the protocol govready.com/apps/compliance/2018/information-technology-system

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -75,7 +75,8 @@ h1 {
 {% endcomment %}
 
 <div style="float: right; margin: 0 0 1em 5em;">
-  <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add app </a>
+  <a id="new-system" href="/store?protocol=govready.com/apps/compliance/2018/information-technology-system" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add system </a>
+  <a id="new-project" href="/store" class="btn btn-success"><i class="glyphicon glyphicon-plus"></i> Add other app </a>
   {% if is_lonely_admin %}
   <a href="#" onclick="show_invite_to_org(); return false;" class="btn btn-success"><i class="glyphicon glyphicon-send"></i> Invite colleague </a>
   {% endif %}
