--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -56,6 +56,7 @@ div.subtitle {
 {% endblock %}
 
 {% block body %}
+{{block.super}}
 <div class="row">
   {% if is_project_page %}
   <div class="col-md-push-10 col-md-2">
