Polishes lifecycle stages css
Remove spacing between projects in lifecycle stages.

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -25,7 +25,7 @@ h1 {
   margin: 0 0 1em 0;
 }
 .lifecycle .stage {
-  min-height: 33vh;
+  min-height: 40vh;
   margin: 0 -15px;
   background-color: #FBFBFD;
   border: 1px solid #DBDBDC;
@@ -41,9 +41,9 @@ h1 {
   }
 
   .project {
-    margin: 1em 7px;
+    margin: 0em 0px;
     padding: 10px 7px;
-    border: 1px solid #D5D5D5;
+    border-bottom: 1px solid #D5D5D5;
     background-color: white;
   }
     .project-image {
