migrate from jquery-textcomplete, which is no longer supported, to textcomplete by the same author that has basically the same API
fixes #414

--- a/templates/base.html
+++ b/templates/base.html
@@ -332,7 +332,7 @@
         <script src="{% static "vendor/bootstrap/js/bootstrap.min.js" %}"></script>
         <script src="{% static "vendor/bootstrap-responsive-tabs.js" %}"></script>
         <script src="{% static "vendor/autosize.min.js" %}"> </script>
-        <script src="{% static "vendor/jquery.textcomplete.min.js" %}"> </script>
+        <script src="{% static "vendor/textcomplete.min.js" %}"> </script>
 
         <script src="{% static "js/discussion.js" %}"></script>
         <script src="{% static "js/main.js" %}"></script>
